--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -10,3 +10,21 @@
     import 'relative/path/to/stylesheet.scss';
 
 */
+.glow {
+    box-shadow: 0px 0px 20px rgb(226, 241, 14);
+}
+.circle {
+    width: 50px;
+    margin: 5px;
+    height: 50px;
+    border-radius: 50%;
+}
+.box{
+    width: 70px;
+    height: 180px;
+    background-color: black;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
